# icaldo

iCaldo/: deployment.pri  iCaldo.pro
iCaldo/include/: communication.h  controller.h  i2c_device.h  i2c_linux_device.h  mcp4725.h  thermometer.h  thermometer_linux.h  wire_1.h  wire_1_linux.h
iCaldo/src/: i2c_device.cpp  i2c_linux_device.cpp  icaldo.cpp  mcp4725.cpp  smbus_device.cpp  smbus_linux_device.cpp  thermometer.cpp  thermometer_linux.cpp  wire_1.cpp  wire_1_linux.cpp
src/: CMakeLists.txt  i2c_device.cpp  i2c_device.h  i2c_linux_device.cpp  i2c_linux_device.h  i2c_type.h  icaldo.cpp  icaldo.cpp.autosave  mcp4725.cpp  mcp4725.h  smbus_device.cpp  smbus_device.h  smbus_linux_device.cpp  smbus_linux_device.h
